RESOLVED FIXED309984
ResizeObserver::observeInternal can be slow when there are lot of observed nodes
https://bugs.webkit.org/show_bug.cgi?id=309984
Summary ResizeObserver::observeInternal can be slow when there are lot of observed nodes
Ryosuke Niwa
Reported 2026-03-15 10:23:12 PDT
ResizeObserver::observeInternal does a linear search on m_observations to find a matching observation. This can get really slow when m_observations is large.
Attachments
Ryosuke Niwa
Comment 1 2026-03-15 10:29:02 PDT
EWS
Comment 2 2026-03-16 10:43:04 PDT
Committed 309334@main (56629df99683): <https://commits.webkit.org/309334@main> Reviewed commits have been landed. Closing PR #60661 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-16 10:44:13 PDT
Note You need to log in before you can comment on or make changes to this bug.