ResizeObserver::observeInternal can be slow when there are lot of observed nodes https://bugs.webkit.org/show_bug.cgi?id=309984

Reviewed by Chris Dumez.

ResizeObserver::observeInternal can be slow when m_observations is large since
it does a linear search of the target in m_observations.

Since we tend to have a lot more elements than ResizeObservers, do the reverse
search in ResizeObserverData of the target first.

No new tests since there should be no observable behavior changes besides perf.

* Source/WebCore/page/ResizeObserver.cpp:
(WebCore::ResizeObserver::observationForElement): Added.
(WebCore::ResizeObserver::observeInternal):
(WebCore::ResizeObserver::resetObservationSize):
* Source/WebCore/page/ResizeObserver.h:

Canonical link: https://commits.webkit.org/309334@main